...
                    android:clickable="true"
                    android:contentDescription="@null"
                    android:focusable="true"
                    android:src="@drawable/download_24" />

                <ImageButton
                    android:id="@+id/ibExpand"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="bottom|end"
                    android:background="@android:color/transparent"
                    android:clickable="true"
                    android:contentDescription="@null"
...
                    android:layout_height="50dp"
                    android:background="#80000000"
                    android:layout_gravity="bottom"/>
            </FrameLayout>

            <LinearLayout
                android:id="@+id/llData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="visible">

...
